--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@
         width: 100%;
         position: relative;
         background-color: var(--color-menu-bg);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,17,17,1) 35%, rgba(51,51,51,1) 100%);
         top: 0;
         padding: 25px 0 15px 0;
       }
