--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,16 @@
       max-width: 400px;
     }
 
+    .form-control-bee {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 0;
+      width: 0;
+      z-index: -1;
+    }
+
     .form-submit {padding: 10px 15px; font-size: inherit; margin-top: 10px; border-radius: 10px; border: 1px solid #ccc;}
     .form-submit:hover {background-color: #fff; cursor:pointer;}
 
