--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ CSS Stylesheet for philboivin.com
     --logo-font-size : 1.7em;
     --form-font-size : 1.1em;
     --menu-font-size : 1.1em;
-    --p-font-size : 1.2em;
+    --p-font-size : 1.1em;
     --h1-font-size : 1.6em;
     --h2-font-size : 1.4em;
     --footer-font-size: 1.0em;
@@ -56,8 +56,9 @@ CSS Stylesheet for philboivin.com
     .container {
     margin: 0 auto; padding-top: var(--menu-height); display: grid;  
     grid-template-columns: 100%;
-    grid-template-rows: 10px 12vh auto auto;
-    align-items: center;
+    min-height: calc(120vh);
+    grid-template-rows: 10px 12vh auto 180px;
+   /* align-items: center;*/
     grid-template-areas:
       "topBar"
       "header"
@@ -116,7 +117,7 @@ CSS Stylesheet for philboivin.com
     
     nav {grid-area: nav; font-size: var(--menu-font-size);}
     nav a {color: var(--color-menu-a); text-decoration: none;}
-    nav a:hover {text-decoration: underline;}
+   /* nav a:hover {text-decoration: underline;}*/
     nav ul {padding: 10px;}
     nav li {display: inline; padding: 0 10px;}
     .nav-light a {color: var(--color-menu-a);}
@@ -166,29 +167,30 @@ CSS Stylesheet for philboivin.com
     main {
       grid-area: main; 
       width: var(--content-width); 
-      min-height: calc(80vh);
-      margin: 20px auto; 
+    /*  min-height: calc(80vh);*/
+      margin: 10px auto; 
       display: grid;  
-      grid-template-columns: auto;
-      grid-template-rows: auto auto;
+ /*     grid-template-columns: auto;
+      grid-template-rows: auto auto;*/
+
       grid-template-areas:
-        "content"
-        "projects";
+        "content";
     }
 
     main p {line-height: 1.4; margin: 10px 0 15px 0;}
 
-    h1 {font-size: var(--h1-font-size); margin: 0 0 15px 0; font-family: var(--h-font); font-weight: normal;}
-    h2 {font-size: var(--h2-font-size); margin: 0 0 10px 0; font-family: var(--h-font); font-weight: normal;}
+    h1 {font-size: var(--h1-font-size); margin: 10px 0; font-family: var(--h-font); font-weight: normal;}
+    h2 {font-size: var(--h2-font-size); margin: 10px 0; font-family: var(--h-font); font-weight: normal;}
     a {color: var(--color-body-a);}
     section p {font-size: var(--p-font-size);}
 
     .serif {font-family: var(--logo-font);}
     #content {grid-area: content; text-align: left; }
-    #projects {grid-area: projects; text-align: left; }
-    .gallery {padding: 20px 0;}    
+    #projects {grid-area: projects; text-align: left; } 
     .success {color: green}
     .error {color: red;}
+    .content-block {margin-bottom: 40px;}
+    .top-spacer {margin-top: 30px;}
 
 
     /*****************************************/
@@ -218,7 +220,8 @@ CSS Stylesheet for philboivin.com
     }
 
     .form-submit {padding: 10px 15px; font-size: inherit; margin-top: 10px; border-radius: 10px; border: 1px solid var(--form-submit-color-border);}
-    .form-submit:hover {background-color: var(--form-submit-color-hover); cursor:pointer;}
+    .form-submit:hover {cursor:pointer;}
+    .form-submit-disabled:hover {cursor: default;}
 
     .redCircle {
     border-radius: 50%;
@@ -279,11 +282,11 @@ CSS Stylesheet for philboivin.com
         background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(17,17,17,1) 35%, rgba(51,51,51,1) 100%);
         top: 0;
         padding: 25px 0 15px 0;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
       }
 
   
-      #logo {margin: 0 auto; width: var(--content-width-mobile); padding: 0 0 0 5px; color: var(--color-logo-light);}
+      #logo {margin: 0 auto; width: var(--content-width-mobile); padding: 0 0 10px 5px; color: var(--color-logo-light);}
       nav {margin: 0 auto; width: var(--content-width-mobile); padding: 0 0 0 5px;}
       nav ul {padding: 0;}
       nav li {padding: 0 10px 0 0;}
