--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ CSS Stylesheet for philboivin.com
     .container {
     margin: 0 auto; padding-top: var(--menu-height); display: grid;  
     grid-template-columns: 100%;
-    min-height: calc(120vh);
+    min-height: 100vh;
     grid-template-rows: 10px 12vh auto 180px;
    /* align-items: center;*/
     grid-template-areas:
